# basemodule

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  bitherlibjni.cpp  bitherlibjni.h
app/src/main/java/com/base/basemodule/: BaseActivity.java  BaseActivity.kt  BaseApplication.java  BaseDBActivity.java  BaseDBFragment.java  BaseFragment.java  BaseViewModel.java  IAppInit.java  MaxLifecyclePagerAdapter.java  Presenter.java  SingleLiveEvent.java  XLazyFragment.java
app/src/main/java/com/base/basemodule/config/: AppConfig.java  NetConfig.java
app/src/main/java/com/base/basemodule/data/: BaseRemoteDataSource.java  BaseRepository.java  BaseResp.java  DataStatus.java  NetworkBoundResource.java  Status.java
app/src/main/java/com/base/basemodule/databinding/: BaseDatabinding.java
app/src/main/java/com/base/basemodule/net/: ApiException.java
app/src/main/java/com/base/basemodule/utils/: ActivityUtils.java  AndroidBug5497Workaround.java  BitmapUtils.java  CameraAndCropUtils.java  CrashHandler.java  DeviceStatusUtils.java  EmojiFilter.java  FileProvider7.java  FileUtil.java  FixMemLeak.java  FontsUtils.java  LiveDataTimer.java  MyAppGlideModule.java  MyFileProvider.java  MyStatusBarUtil.java  (+9 more)
app/src/main/kotlin/: BaseApplication.kt
app/src/main/res/anim/: activity_left_in.xml  activity_left_out.xml  activity_right_in.xml  activity_right_out.xml
app/src/main/res/layout/: keyboradpopupwindow.xml
app/src/main/res/values/: strings.xml
(+36 files in other folders)
